--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "apple-signin-react": "^1.0.2",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -20,14 +25,17 @@
     "eslint": "^8.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
+    "jsdom": "^26.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vite-plugin-history": "^1.0.2"
+    "vite-plugin-history": "^1.0.2",
+    "vitest": "^3.2.4"
   },
   "scripts": {
     "start": "vite --port 8001",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "dev": "vite --port 8001"
+    "dev": "vite --port 8001",
+    "test": "vitest"
   }
 }
