--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.11",
@@ -36,6 +37,6 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "dev": "vite --port 8001",
-    "test": "vitest"
+    "test": "vitest --environment jsdom"
   }
 }
